--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,7 +16,7 @@ html {
 
 body {
   box-sizing: border-box;
-  font-family: 'Dancing Script', cursive;
+  font-family: "Dancing Script", cursive;
   font-size: 4.2rem;
   overflow: hidden;
 }
@@ -32,11 +32,11 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url('https://steamcdn-a.akamaihd.net/steam/apps/837470/ss_5178f94152d2e400a5d87d8d628c4101b5f9cbb7.1920x1080.jpg?t=1569616260');
+  background-image: url("https://steamcdn-a.akamaihd.net/steam/apps/837470/ss_5178f94152d2e400a5d87d8d628c4101b5f9cbb7.1920x1080.jpg?t=1569616260");
 }
 
 .notebook {
-  background-color: #FFFAE7;
+  background-color: #fffae7;
   margin: 20vh auto 0;
   max-width: 120rem;
   z-index: 1;
@@ -66,10 +66,10 @@ body {
     height: 100%;
     position: relative;
     background: repeating-linear-gradient(
-      #A4C0EB 0px,
-      #A4C0EB 3px,
+      #a4c0eb 0px,
+      #a4c0eb 3px,
       transparent 4px,
-      transparent 6rem,
+      transparent 6rem
     );
     z-index: 2;
     list-style-type: none;
@@ -80,7 +80,7 @@ body {
     position: absolute;
     height: 100%;
     width: 3px;
-    background-color: #EC9D90;
+    background-color: #ec9d90;
     left: 12rem;
     top: 0;
     z-index: 3;
@@ -90,7 +90,7 @@ body {
     position: absolute;
     height: 3px;
     width: 100%;
-    background-color: #A4C0EB;
+    background-color: #a4c0eb;
     top: 14rem;
     left: 0;
     z-index: 2;
@@ -99,18 +99,27 @@ body {
 
 .todo {
   position: relative;
-  margin-left: 3rem;
+  margin-left: -8rem;
+  padding-left: 11rem;
 
-  &:first-child {
-    // padding-top: 1.8rem;
+  &--completed {
+    text-decoration: line-through;
   }
 
-  &:before {
+  &::before {
     content: "\2022";
     position: absolute;
     font-size: 6rem;
-    left: -2.6rem;
+    left: 8rem;
     top: -1.8rem;
+  }
+
+  &--add {
+    &::before {
+      content: "";
+    }
+
+    margin-left: -11rem;
   }
 
   &:hover {
@@ -120,33 +129,60 @@ body {
     }
   }
 
-  input {
+  &:not(&--add) > .button-icon {
     position: absolute;
-    height: 100%;
-    width: 6rem;
-    position: absolute;
-    left: -8rem;
-    opacity: 0;
-    visibility: hidden;
-  }
-
-  input:checked + textarea {
-    text-decoration: line-through;
+    left: 0rem;
   }
 
   textarea {
     display: block;
     width: 100%;
-    font-family: 'Dancing Script', cursive;
+    font-family: "Dancing Script", cursive;
     font-size: 4.2rem;
     line-height: 6rem;
     background-color: transparent;
     border: none;
-    padding: 0 .2rem;
+    padding: 0 0.2rem;
     resize: none;
 
     &:focus {
       outline: none;
+    }
+  }
+}
+
+button {
+  font-family: inherit;
+  border: none;
+  font-size: inherit;
+  background: transparent;
+  color: inherit;
+  display: block;
+}
+
+.button-icon {
+  cursor: pointer;
+
+  & > i {
+    transition: 0.5s ease-out;
+    opacity: 0.05;
+    font-size: 4rem;
+  }
+  &:hover > i {
+    opacity: 0.2;
+  }
+
+  &:active {
+    outline: 0;
+    & > i {
+      opacity: 0.7;
+    }
+  }
+
+  &:focus {
+    outline: 0;
+    & > i {
+      opacity: 0.5;
     }
   }
 }
